bin/tests/snapshots/useless_parens__31ac41c8c6e98946b178fde2f6c5a168_lint.snap
---
source: bin/tests/useless_parens.rs
---
("hello")
---
[useless_parens] Warning: These parentheses can be omitted
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ ("hello")
   │ ────┬────  
   │     ╰────── Useless parentheses around primitive expression
───╯
