bin/tests/snapshots/useless_parens__31ac41c8c6e98946b178fde2f6c5a168_lint_errfmt.snap
---
source: bin/tests/useless_parens.rs
---
("hello")
---
<temp_file_path>>1:1:W:8:[useless_parens] Useless parentheses around primitive expression
