bin/tests/snapshots/useless_parens__31ac41c8c6e98946b178fde2f6c5a168_lint_json.snap
---
source: bin/tests/useless_parens.rs
---
("hello")
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "useless_parens",
      "note": "These parentheses can be omitted",
      "code": 8,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 10
            }
          },
          "message": "Useless parentheses around primitive expression",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 10
              }
            },
            "fix": "\"hello\""
          },
          "fixable": true
        }
      ]
    }
  ]
}
