bin/tests/snapshots/useless_parens__4d37aa86b470346c97523d0152f7860b_lint.snap
---
source: bin/tests/useless_parens.rs
---
let a = (1 + 2); in null
---
[useless_parens] Warning: These parentheses can be omitted
   ╭─[ <temp_file_path>:1:9 ]
   │
 1 │ let a = (1 + 2); in null
   │         ───┬───  
   │            ╰───── Useless parentheses around value in binding
───╯
