bin/tests/snapshots/useless_parens__4d37aa86b470346c97523d0152f7860b_lint_errfmt.snap
---
source: bin/tests/useless_parens.rs
---
let a = (1 + 2); in null
---
<temp_file_path>>1:9:W:8:Useless parentheses around value in binding
