bin/tests/snapshots/useless_parens__518aa31f8b9a466e2e92490ffd87be42_lint.snap
---
source: bin/tests/useless_parens.rs
---
let h = ({ inherit (builtins) map; }); in null
---
[08] Warning: These parentheses can be omitted
   ╭─[ <temp_file_path>:1:9 ]
   │
 1 │ let h = ({ inherit (builtins) map; }); in null
   │         ──────────────┬──────────────  
   │                       ╰──────────────── Useless parentheses around value in binding
───╯
