bin/tests/snapshots/useless_parens__518aa31f8b9a466e2e92490ffd87be42_lint_errfmt.snap
---
source: bin/tests/useless_parens.rs
---
let h = ({ inherit (builtins) map; }); in null
---
<temp_file_path>>1:9:W:8:Useless parentheses around value in binding
