bin/tests/snapshots/useless_parens__518aa31f8b9a466e2e92490ffd87be42_lint_json.snap
---
source: bin/tests/useless_parens.rs
---
let h = ({ inherit (builtins) map; }); in null
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "useless_parens",
      "note": "These parentheses can be omitted",
      "code": 8,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 9
            },
            "to": {
              "line": 1,
              "column": 38
            }
          },
          "message": "Useless parentheses around value in binding",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 9
              },
              "to": {
                "line": 1,
                "column": 38
              }
            },
            "fix": "{ inherit (builtins) map; }"
          },
          "fixable": true
        }
      ]
    }
  ]
}
