bin/tests/snapshots/useless_parens__dbf237a5ac629f60efb6cc28b28986f3_lint.snap
---
source: bin/tests/useless_parens.rs
---
[(builtins.map)]
---
[useless_parens] Warning: These parentheses can be omitted
   ╭─[ <temp_file_path>:1:2 ]
   │
 1 │ [(builtins.map)]
   │  ───────┬──────  
   │         ╰──────── Useless parentheses around primitive expression
───╯
